--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -38,6 +38,7 @@
 			@include flex (center, center, $flex-direction: column);
 			margin-bottom: 30px;
 		}
+
 		@media only screen and (max-width: 590px) and (orientation: landscape) {
 			flex-direction: row;
 			margin-bottom: 20px;
@@ -58,16 +59,17 @@
 		@media only screen and (max-width: 590px) {
 			margin-right: 0;
 			margin-bottom: 30px;
-			
+
 			@media only screen and (max-width: 590px) and (orientation: landscape) {
 				margin-right: 134px;
 				margin-bottom: 0;
-			}}
+			}
+		}
 
 
 		&::before {
 			@include pseudo;
-			@include pos-px (absolute, $top: 10, $left: 205);
+			@include pos (absolute, $top: 10px, $left: 205px);
 			@include wh-px (48, 2);
 			background-color: $bg-header-color;
 
@@ -83,7 +85,7 @@
 	}
 
 	&__burger-btn {
-		@include pos-px (fixed, $top: 15, $right: 25);
+		@include pos (fixed, $top: 15px, $right: 25px);
 		@include wh(50px);
 		display: none;
 		z-index: 1;
@@ -104,9 +106,7 @@
 	&__btn {
 		@include wh-px (280, 70);
 		border-radius: 35px;
-		@include font (24px, 60px, $text-transform: capitalize);
-		letter-spacing: -0.02em;
-		padding-left: 17px;
+		@include font (24px, 60px);
 		position: relative;
 
 		&::before {
@@ -155,6 +155,7 @@
 		&__list {
 			flex-direction: row;
 		}
+
 		&__right-block {
 			margin-bottom: 20px;
 		}
