--- a/src/assets/scss/layout/_smoothies.scss
+++ b/src/assets/scss/layout/_smoothies.scss
@@ -4,7 +4,9 @@
 	@media only screen and (max-width: 960px) {
 		padding: 48px 0 90px;
 	}
-
+&__wrapper {
+	@include flex ($align-items: center, $flex-direction: column);
+}
 	&__title {
 		text-align: center;
 		margin-bottom: 40px;
@@ -18,14 +20,14 @@
 	&__text {
 		max-width: 915px;
 		text-align: center;
-		margin: 0 auto 40px;
+		margin-bottom: 40px;
 		
 	}
 
 	&__cards {
 		@include flex (center, center, wrap);
 		max-width: 1050px;
-		margin: 0 auto;
+		
 		background-color: $bg-cards-color;
 
 		@media only screen and (max-width: 960px) {
