--- a/src/assets/scss/layout/_blog.scss
+++ b/src/assets/scss/layout/_blog.scss
@@ -1,68 +1,89 @@
 .blog {
-	padding: 90px 10px 190px;
-	
+	padding: 90px 0 190px;
+
+	@media only screen and (max-width: 1440px) {
+		padding-bottom: 90px;
+	}
+
 	&__wrapper {
-		@include flex (center, center, wrap);
+		@include flex ($align-items: center);
+		padding-left: 15%;
+
+		@media only screen and (max-width: 1440px) {
+			@include flex ($flex-direction: column);
+			padding: 0;
+		}
 	}
 
 	&__box {
 		@include flex ($flex-direction: column);
 		margin-right: 60px;
-		
+
+		@media only screen and (max-width: 1440px) {
+			margin-right: 0;
+		}
 	}
 
 	&__title {
 		margin-bottom: 62px;
-		}
-		&__img {
-			width: 100%;
-			
-		}
-		&__picture {
-			position: relative;
-			&::before {
-				@include pseudo;
-				@include pos (absolute, $top: 17%, $left: 93%);
-				@include wh (685px, 12px);			
-    			background-color: #f7ae3b;
-				z-index: -1;
-				border-bottom-right-radius: 10px;
-				border-top-right-radius: 10px; 
-				
-				@media only screen and (max-width: 1216px) {
-					display: none;
-			}
-			}
-		}
-			
-		
 
-	&__text-box {
-		padding: 225px 0 45px;
-		margin-right: 40px;
-		
-		@media only screen and (max-width: 1216px) {
-			margin-top: 30px;
-			
-			}
+		@media only screen and (max-width: 1440px) {
+			margin-bottom: 30px;
+		}
+	}
 
-		
+	&__img {
+		width: 100%;
+	}
+
+	&__picture {
+		position: relative;
+
+		&::before {
+			@include pseudo;
+			@include pos (absolute, $top: 18%, $left: 92%);
+			@include wh (685px, 12px);
+			background-color: #f7ae3b;
+			z-index: -1;
+			border-bottom-right-radius: 10px;
+			border-top-right-radius: 10px;
+
+			@media only screen and (max-width: 1440px) {
+				display: none;
+			}
+		}
+	}
+
+	&__inner {
+		@include flex ($flex-direction: column);
+		padding: 205px 0 0;
+
+
+		@media only screen and (max-width: 1440px) {
+			margin-top: 50px;
+			padding: 0;
+
+		}
 	}
 
 	&__subtitle {
 		@include font (30px, 39px, 800);
-		letter-spacing: -0.02em;		
-		}
+		letter-spacing: -0.02em;
+	}
 
 	&__time {
 		@include font (16px, 35px);
-		
-		}
+
+	}
 
 	&__text {
 		max-width: 472px;
-		margin: 30px 0 0 62px;
+		margin: 25px 0 0 65px;
+
+		@media only screen and (max-width: 576px) {
+			margin: 10px 0 0;
 		}
+	}
 
 	&__link {
 		@include font (18px, 35px, 800);
@@ -71,7 +92,7 @@
 
 		&::after {
 			@include pseudo;
-			@include pos (absolute, $bottom: 5px, $right: -30px);
+			@include pos (absolute, $bottom: 40%, $right: -30%);
 			@include wh-px (18, 10);
 			@include background (url("../images/base/arrow.png"));
 		}
