--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -19,6 +19,7 @@
 @import "./components/menu";
 @import "./components/personal";
 @import "./components/social";
+@import "./components/form";
 
 // layout
 @import "./layout/header";
