--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -1,27 +1,54 @@
-form {
+.form {
 	margin-bottom: 24px;
 	position: relative;
 
 	&::before {
 		@include pseudo;
-		@include pos ($position: absolute, $top: 22px, $left: 22px);
+		@include pos (absolute, $top: 37%, $left: 6%);
 		@include wh-px (24, 19);
 		@include background (url("../images/footer/footer_email.png"));
 	}
+	&::after {
+		@include pseudo;
+		@include pos (absolute, $bottom: -90%, $left: 25%);
+		@include background (url("../images/footer/footer_arrow.png"));
+		@include wh (48px, 42px);
+		@media only screen and (max-width: 1520px) {
+			left: 15%;
+		}
+		@media only screen and (max-width: 1368px) {
+			left: 5%;
+		}
+	}
+
+	// .form__input
 	&__input {
 		max-width: 498px;
 		@include wh (100%, 62px);
-		text-indent: 65px;
+		padding: 0 0 0 65px;
 		background-color: $bg-main-color;
 		outline: 0;
 		border-style: none;
 		border-radius: 30px;
-	
+
 		&::placeholder {
 			@include font (17px, 35px, 700);
 			letter-spacing: -0.02em;
 			color: $text-footer-color;
 		}
 	}
-}
 
+	// .form__submit
+	&__submit {
+		@include font (16px, 40px, 800, $text-transform: uppercase);
+		
+		color: $text-footer-color;
+		@include pos (absolute, $bottom: -102%, $left: 38%);
+		border-style: none;
+		background-color: transparent;
+		@media only screen and (max-width: 1368px) {
+			left: 25%;
+		}
+		
+	}
+}
