--- a/src/assets/scss/components/_title.scss
+++ b/src/assets/scss/components/_title.scss
@@ -1,5 +1,5 @@
 .title {
-	@include font ($font-size: 50px, $line-height: 40px, $font-weight: 600);
+	@include font ($font-size: 50px, $line-height: 0.8, $font-weight: 600);
 	letter-spacing: -0.02em;
 
 
@@ -35,7 +35,7 @@
 
 	@media only screen and (max-width: 360px) {
 		& {
-			@include font ($font-size: 44px, $line-height: 55px);
+			@include font ($font-size: 44px, $line-height: 0.8);
 		}
 	}
 }
