--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -5,10 +5,10 @@
 	}
 
 	&__wrapper {
-		@include flex (space-between, flex-start);
+		@include flex (space-between, flex-start, wrap);
 
 		@media only screen and (max-width: 1280px) {
-			@include flex (center, center, $flex-direction: column);
+			@include flex (center, center);
 		}
 
 		// @media only screen and (max-width: 1568px) {
@@ -18,32 +18,25 @@
 
 	&__logo {
 		margin-top: 65px;
-		flex-basis: 25%;
+		width: 29%;
 
 		@media only screen and (max-width: 1280px) {
-			flex-basis: 100%;
-			margin: 0 0 50px;
+		
+    margin: 0px 150px 50px;
 		}
 
 	}
 
-	&__wrap {
-		flex-basis: 38%;
-		@include flex (center, center, wrap);
-		margin: 0 50px;
 
-		@media only screen and (max-width: 1280px) {
-			flex-basis: 100%;
-			margin: 0 0 50px;
-			gap: 100px;
-		}
-	}
 
 	&__info {
-		flex-basis: 43%;
+		width: 15%;
+		margin-right: 10px;
 
-		@media only screen and (max-width: 1280px) {
-			flex-basis: 50%;
+		@media only screen and (max-width: 1280px) {		
+			    width: 35%;
+    margin-left: 100px;
+    margin-right: 100px;
 		}
 
 	}
@@ -60,12 +53,12 @@
 	}
 
 	&__pay {
-		flex-basis: 42%;
-		margin-left: 34px;
-
-
+		@include flex ($flex-direction: column);
+		width: 20%;		
+		margin-right: 10px;
+		
 		@media only screen and (max-width: 1280px) {
-			flex-basis: 50%;
+			width: 30%;
 			margin-left: 0;
 		}
 	}
@@ -81,11 +74,14 @@
 	}
 
 	&__box {
-		flex-basis: 29%;
+		@include flex ($flex-direction: column);
 		margin-left: 60px;
+		 width: 29%;
+
 
 		@media only screen and (max-width: 1280px) {
-			flex-basis: 100%;
+			margin-top: 50px;
+
 			margin-left: 0;
 		}
 	}
@@ -93,10 +89,10 @@
 
 	&__inner {
 		@include flex (flex-end, center);
-		margin-right: 9%;
+		margin-right: 45px;
 
 		@media only screen and (max-width: 1520px) {
-			margin-right: 0;
+			margin-right: 20px;
 		}
 	}
 
@@ -143,3 +139,307 @@
 		}
 	}
 }
+
+// .footer {
+//     background-color: #f6ad38;
+// }
+
+// .footer__info_heading {
+//     font-weight: 800;
+//     color: white;
+//     padding-bottom: 18px;
+//     font-size: 27px;
+//     line-height: 37px;
+// }
+// @media screen and (max-width: 1625px) {
+//     .footer__box-small {
+//         margin-left: 20px;
+//     }
+//     .footer__follow-us {
+//         font-size: 16px;
+//         font-weight: 18px;
+//         padding-left: 70px;
+//         margin-right: 17px;
+//     }
+// }
+// .footer__content {
+//     display: flex;
+//     padding: 75px 0 101px 0;
+//     flex-wrap: wrap;
+// }
+
+// .footer__logo {
+//     margin-top: 62px;
+//     width: 29%;
+// }
+
+// .footer__info {
+//     width: 18%;
+//     margin-right: 10px;
+// }
+
+// .footer__info_item {
+//     color: #6d450c;
+//     font-weight: bold;
+//     line-height: 35px;
+// }
+
+// .footer__info_link {
+//     text-decoration: none;
+// }
+
+// .footer__pay {
+//     width: 23%;
+//     display: flex;
+//     flex-direction: column;
+//     margin-right: 10px;
+// }
+
+// .footer__pay-heading {
+//     color: white;
+//     padding-bottom: 20px;
+//     font-size: 26px;
+//     line-height: 37px;
+//     font-weight: 800;
+// }
+
+// .footer__pay-list {
+//     max-width: 247px;
+//     display: flex;
+//     flex-wrap: wrap;
+//     gap: 6px;
+//     align-items: center;
+// }
+
+// .footer__pay-item {
+//     margin-right: 10px;
+// }
+
+// .footer__block {
+//     width: 28%;
+//     display: flex;
+//     flex-direction: column;
+// }
+
+// .footer__block-heading {
+//     color: white;
+//     font-size: 26px;
+//     line-height: 38px;
+//     font-weight: bold;
+//     padding-bottom: 22px;
+// }
+
+// .footer__block-form {
+//     display: flex;
+//     align-items: center;
+//     position: relative;
+// }
+
+// .footer__block-form::before {
+//     content: " ";
+//     position: absolute;
+//     background-image: url(../img/footer/Icon.png);
+//     top: 22px;
+//     left: 21px;
+//     width: 24px;
+//     height: 19px;
+//     background-position: center;
+//     z-index: 1;
+// }
+
+// .footer__block-input {
+//     font-family: "Muli-Bold", sans-serif;
+//     padding: 21px 0 20px 62px;
+//     font-size: 17px;
+//     color: #6d450c;
+//     font-weight: bold;
+//     line-height: 35px;
+//     border-radius: 35px;
+//     max-width: 495px;
+//     width: 100%;
+//     height: 60px;
+//     margin-bottom: 21px;
+//     border: none;
+//     position: relative;
+// }
+
+// .footer__block-input::placeholder {
+//     color: inherit;
+// }
+
+// .footer__box-small {
+//     max-width: 335px;
+//     display: flex;
+//     margin-left: 111px;
+// }
+
+// .footer__follow-us {
+//     color: #805313;
+//     font-size: 18px;
+//     font-weight: 800;
+//     line-height: 40px;
+//     background-color: #f6ad38;
+//     text-transform: uppercase;
+//     font-family: "Muli-ExtraBold";
+//     border: none;
+//     padding-left: 74px;
+//     margin-right: 41px;
+//     position: relative;
+// }
+
+// .footer__follow-us::before {
+//     content: "";
+//     position: absolute;
+//     background-image: url(../img/footer/Arrow.png);
+//     width: 48px;
+//     height: 43px;
+//     background-position: center;
+//     top: 25%;
+//     left: 5%;
+//     transform: translateY(-50%);
+// }
+
+// .footer__social {
+//     max-width: 110px;
+// }
+
+// .footer__social-list {
+//     display: flex;
+// }
+
+// .footer__social-item {
+//     margin-right: 22px;
+// }
+
+// .footer__row {
+//     height: 60px;
+//     background: #6d450c;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     position: relative;
+// }
+
+// .footer__center-text {
+//     font-size: 13px;
+//     line-height: 35px;
+//     color: #af8a82;
+//     display: block;
+//     text-align: center;
+// }
+
+// .footer__btn-top {
+//     width: 50px;
+//     height: 50px;
+//     border-radius: 5px;
+//     background-color: #f2662f;
+//     position: fixed;
+//     right: 82px;
+//     bottom: 38px;
+//     background-image: url(../img/footer/Iconup.png);
+//     background-repeat: no-repeat;
+//     background-position: center;
+// }
+
+// .footer__btn-top::after {
+//     content: "Go top";
+//     color: white;
+//     font-family: "Muli-Bold", sans-serif;
+//     font-size: 16px;
+//     line-height: 40px;
+//     position: absolute;
+//     right: 54px;
+//     top: 38px;
+//     display: block;
+//     width: 55px
+// }
+// .footer__content {
+//         justify-content: space-around;
+//         padding-bottom: 60px;
+//         padding-top: 0;
+//     }
+//     .footer__logo {
+//         width: 100%;
+//         text-align: center;
+//         margin-bottom: 70px;
+//     }
+//     .footer__info_item {
+//         font-size: 15px;
+//     }
+//     .footer__info {
+//         width: 50%;
+//         max-width: 165px;
+//     }
+//     .footer__info_heading {
+//         font-size: 25px;
+//     }
+//     .footer__pay {
+//         width: 50%;
+//         max-width: 250px;
+//     }
+//     .footer__pay-heading {
+//         font-size: 25px;
+//     }
+//     .footer__block {
+//         width: 100%;
+//         flex-basis: 500px;
+//         /* margin-top: 80px; */
+//     }
+//     .footer__block-heading {
+//         font-size: 25px;
+//     }
+//     .footer__btn-top {
+//         right: 35px;
+//     }
+//     .footer__follow-us {
+//         font-size: 14px;
+//         line-height: 20px;
+//     }
+// }
+
+// @media screen and (max-width: 971px) {
+//     .footer__block {
+//         margin-top: 80px;
+//     }
+// }
+
+// .footer__content {
+//         justify-content: flex-start;
+//     }
+//     .footer__info {
+//         width: 100%;
+//         margin-bottom: 70px;
+//     }
+//     .footer__pay {
+//         width: 100%;
+//         max-width: 340px;
+//         margin-bottom: 70px;
+//     }
+//     .footer__info_heading {
+//         margin-bottom: 35px;
+//     }
+//     .footer__pay-item {
+//         flex-basis: 20px;
+//     }
+//     .footer__pay-list {
+//         max-width: 340px;
+//     }
+//     .footer__block {
+//         margin: 0;
+//     }
+//     .footer__box-small {
+//         margin-left: 0;
+//     }
+//     .footer__follow-us {
+//         font-size: 14px;
+//     }
+//     .footer__block-input {
+//         font-size: 14px;
+//     }
+//     .footer__btn-top {
+//         right: 14px;
+//     }
+//     .footer__btn-top::after {
+//         display: none;
+//     }
+// }
