--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -4,7 +4,7 @@
 
 	&::before {
 		@include pseudo;
-		@include pos (absolute, $top: 37%, $left: 6%);
+		@include pos (absolute, $top: 37%, $left: 4%);
 		@include wh-px (24, 19);
 		@include background (url("../images/footer/footer_email.png"));
 	}
@@ -18,6 +18,9 @@
 		// }
 		@media only screen and (max-width: 1420px) {
 			left: 10%;
+		}
+		@media only screen and (max-width: 600px) {
+			left: 3%;
 		}
 	}
 
@@ -48,6 +51,9 @@
 		background-color: transparent;
 		@media only screen and (max-width: 1420px) {
 			left: 30%;
+		}
+		@media only screen and (max-width: 600px) {
+			left: 18%;
 		}
 		
 	}
