--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -6,25 +6,21 @@
 
 	&__wrapper {
 		@include flex (space-between, flex-start, wrap);
-
-		@media only screen and (max-width: 1280px) {
-			@include flex (center, center);
-		}
-
-		// @media only screen and (max-width: 1568px) {
-		// 	@include flex (center, center, wrap, column);
-		// }
-	}
+			}
 
 	&__logo {
 		margin-top: 65px;
 		width: 29%;
 
-		@media only screen and (max-width: 1280px) {
-		
-    margin: 0px 150px 50px;
+		@media only screen and (max-width: 1100px) {
+			margin: 65px auto 0;
+			width: 211px;
+			
 		}
-
+		@media only screen and (max-width: 900px) {
+			margin: 0 0 50px;
+			width: 100%;
+		}
 	}
 
 
@@ -33,11 +29,12 @@
 		width: 15%;
 		margin-right: 10px;
 
-		@media only screen and (max-width: 1280px) {		
-			    width: 35%;
-    margin-left: 100px;
-    margin-right: 100px;
+		
+		@media only screen and (max-width: 900px) {
+			width: 100%;
+			margin: 0 0 50px;
 		}
+		
 
 	}
 
@@ -55,11 +52,12 @@
 	&__pay {
 		@include flex ($flex-direction: column);
 		width: 20%;		
-		margin-right: 10px;
 		
-		@media only screen and (max-width: 1280px) {
-			width: 30%;
-			margin-left: 0;
+		
+		@media only screen and (max-width: 900px) {
+			width: 100%;
+			margin-bottom: 50px;
+
 		}
 	}
 
@@ -79,21 +77,14 @@
 		 width: 29%;
 
 
-		@media only screen and (max-width: 1280px) {
-			margin-top: 50px;
-
-			margin-left: 0;
-		}
+		
+	
 	}
 
 
 	&__inner {
-		@include flex (flex-end, center);
-		margin-right: 45px;
-
-		@media only screen and (max-width: 1520px) {
-			margin-right: 20px;
-		}
+		@include flex ($align-items: center);
+		margin-left: 60%;
 	}
 
 
