--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -88,7 +88,7 @@
 		@include pos (fixed, $top: 15px, $right: 25px);
 		@include wh(50px);
 		display: none;
-		z-index: 1;
+		z-index: 99999999999999999999;
 
 		@media only screen and (max-width: 1368px) {
 			display: block;
