--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -6,35 +6,37 @@
 
 	&__wrapper {
 		@include flex (space-between, flex-start, wrap);
+	
 			}
 
 	&__logo {
 		margin-top: 65px;
 		width: 29%;
-
-		@media only screen and (max-width: 1100px) {
-			margin: 65px auto 0;
-			width: 211px;
+		@media only screen and (max-width: 1400px) {
+			width: 25%;
 			
 		}
-		@media only screen and (max-width: 900px) {
+
+		
+		@media only screen and (max-width: 1100px) {
 			margin: 0 0 50px;
 			width: 100%;
 		}
 	}
 
 
-
 	&__info {
 		width: 15%;
 		margin-right: 10px;
-
-		
-		@media only screen and (max-width: 900px) {
-			width: 100%;
+		@media only screen and (max-width: 1100px) {
+			width: 40%;
 			margin: 0 0 50px;
 		}
 		
+		@media only screen and (max-width: 768px) {
+			width: 100%;
+			
+		}	
 
 	}
 
@@ -53,10 +55,14 @@
 		@include flex ($flex-direction: column);
 		width: 20%;		
 		
-		
-		@media only screen and (max-width: 900px) {
-			width: 100%;
+		@media only screen and (max-width: 1100px) {
+			width: 40%;
 			margin-bottom: 50px;
+
+		}
+		@media only screen and (max-width: 768px) {
+			width: 100%;
+			
 
 		}
 	}
@@ -75,6 +81,15 @@
 		@include flex ($flex-direction: column);
 		margin-left: 60px;
 		 width: 29%;
+		 @media only screen and (max-width: 1100px) {
+			width: 55%;
+			margin: 50px 0 0;
+			
+		}
+		@media only screen and (max-width:768px) {
+			width: 85%;		
+			
+		}
 	}
 
 
